try adding title tag to fix data not showing

--- a/emoklore-sheet.css
+++ b/emoklore-sheet.css
@@ -158,11 +158,13 @@
 	font-weight:bold;
 }
 
-.sheet-row-label {
+.sheet-content .sheet-row-label {
 	width:200px;
 	font-size: 14px;
 	margin-left:3px;
 	line-height:1.7em;
+	color:inherit;
+	font-weight:normal;
 }
 
 .sheet-row-label > select {
@@ -228,10 +230,11 @@
 	cursor:pointer;
 }
 
-.sheet_fieldset_hidden { 
+.repeating_reverbrecords { 
 	border: none;
 	margin:0;
 	padding:0;
+	display:flex;
 }
 
 .sheet_point_left {
@@ -245,7 +248,6 @@
 }
 
 .reverb-row-item {
-	flex-grow:2;
 	margin-left:10px;
 }
 
